tests/semantic/valid/03_arithmetic.src
fn main() -> int {
    int a = 10;
    int b = 3;
    return a + b;
}
