tests/semantic/invalid/04_float_to_int.src
fn main() -> int {
    int x = 3.14;
    return x;
}
